# bevy_space_invaders

./: Cargo.toml  README.md
src/: main.rs
src/systems/: constants.rs  enemy.rs  mod.rs  player.rs  projectile.rs  systems_impl.rs  text.rs
