[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"
[profile.dev]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package."*"]
opt-level = 3
[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"]}

